# fencyc

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  changelog.md  todo.md
.github/workflows/: nightly-build.yml  rust.yml
.ignored/: new_tt.ssa  old_tt.ssa
ci-bin/: README.md  qbe
examples/: 1_variables.fcy  2_loops.fcy  3_functions.fcy  4_arrays.fcy  6_structs.fcy  etc_raylib.fcy  iterfib.fcy  test.fcy  test1.fcy
examples/5_modules/: main.fcy  main_temp.s  main_temp.ssa  other.fcy  other_temp.s  other_temp.ssa
src/: cli.rs  main.rs  tests.rs
src/codegen/: codegen.rs  mirtollvm.rs  mirtoqbe.rs
src/fcparse/: fcparse.rs
src/lexer/: lexer.rs
src/logger/: logger.rs
src/mir/: mir.rs
src/seman/: seman.rs
