[package]
name = "fencyc"
version = "0.13.0-a3"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
indexmap = "2.13.0"
indexset = "0.15.0"

# inkwell = { version = "0.7.0", features = ["llvm21-1"] } # for future, maybe

itertools = "0.14.0"
qbe = { git = "https://github.com/Freemorger/qbe-rs.git" }
rayon = "1.11.0"
strum = "0.28.0"
strum_macros = "0.28.0"
